--- a/app/views/layouts/_default_navbar.html.haml
+++ b/app/views/layouts/_default_navbar.html.haml
@@ -22,7 +22,7 @@
   .uk-navbar-content
     Some
     = succeed "." do
-      %a{:href => "#"} Test
+      %a{:href => "#"} Not Test
   .uk-navbar-content.uk-hidden-small
     %form.uk-form.uk-margin-remove.uk-display-inline-block
       %input{:placeholder => "Search", :type => "text"}/
