--- a/app/views/layouts/_default_navbar.html.haml
+++ b/app/views/layouts/_default_navbar.html.haml
@@ -20,7 +20,7 @@
           %li
             %a{:href => "#"} Separated item
   .uk-navbar-content
-    Some
+    SomeTest
     = succeed "." do
       %a{:href => "#"} Not Test
   .uk-navbar-content.uk-hidden-small
