--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,5 @@
-this is test homepage
+.uk-container-center 
+  %form.uk-form
+    .uk-grid
+      .uk-width-1-1
+        %input.uk-width-1-1.uk-form-large{:type => "text", :placeholder => "100"}                                    
