--- a/app/views/layouts/_default_navbar.html.haml
+++ b/app/views/layouts/_default_navbar.html.haml
@@ -32,8 +32,8 @@
       %a.uk-button.uk-button-primary{:href => "/logout"} Logout
     -else
       .uk-button-group
-        %a.uk-button.uk-button-primary{:href => "/users/new"} Sign Up
-        %a.uk-button.uk-button-primary{:href => "/login"} Login
+        %a.uk-button.uk-button-primary{:href => "/users/new?type=florist"} Florist
+        %a.uk-button.uk-button-primary{:href => "/users/new?type=user"} Customer
       
       -#%button.uk-button.uk-button-primary Login
       
