branch choosing and setting up main branch

--- a/app/views/branch/_dashboard_tabs.html.haml
+++ b/app/views/branch/_dashboard_tabs.html.haml
@@ -10,7 +10,7 @@
     %li
       = link_to 'Stats', '/store/orders'  
     %li
-      = link_to 'Settings', '/store/orders'  
+      = link_to 'Settings', '/store/settings'  
 
   
 
