--- a/app/views/branch/new.html.haml
+++ b/app/views/branch/new.html.haml
@@ -1,5 +1,4 @@
-.uk-margin-top
-  %h1
-    Congratulations on Creating Your Florist Store! Time to set your main branch
+= render 'branch/dashboard_tabs'
+.uk-margin-top      
   = render 'branch/form'    
     
