--- a/app/views/branch/_form.html.haml
+++ b/app/views/branch/_form.html.haml
@@ -1,29 +1,41 @@
+-#= form_for(@branch, :html=> {:multipart => true}) do |f|
+= form_for(@branch,:html=> {:multipart => true, :class => 'uk-form'},  :url => {:controller => 'branch'}) do |f|
+	- if @branch.errors.any?
+		#error_explanation
+		= pluralize(@branch.errors.count, "error")
+		prohibited this @branch from being saved:
 
-= form_for(@store, :html=> {:multipart => true},:url => {:action=>"new"}) do |f|
+	%ul
+	- @branch.errors.full_messages.each do |message|
+		%li= message
 
-  - if @store.errors.any?
-    #error_explanation
-    = pluralize(@store.errors.count, "error")
-    prohibited this @store from being saved:
+	.field
+		= f.label 'Branch Name:'
+		%br												
+		-if @store.name.present?
+			= @store.name
+		= f.text_field :sub_name, :placeholder => '<melaka>'    	  
 
-  %ul
-  - @store.errors.full_messages.each do |message|
-    %li= message
+	.field
+		= f.label 'Contact Number'
+		%br
+		= f.text_field :contact_no, :placeholder => 'Contact Number'
+	.field
+		= f.label 'Postal Code'
+		%br
+		= f.text_field :postal_code, :placeholder => 'Postal Code'
+	.field
+		= f.label 'Cut Off Time (24 hour format)'
+		%br
+		= f.datetime_select :cut_off_time, :minute_step => 15
+	.field
+		= f.label 'Business Hours'
+		%br
+		= f.text_area :business_hours,:cols=>80, :rows=>5,:placeholder=> "Weekdays: 9am to 7pm \nSaturdays: 9am - 5pm", :class => 'uk-width-1-1'
+		
+	
+	
 
-  .field
-    = f.label 'Business Registration Number'
-    %br
-    = f.text_field :business_reg_no, :placeholder => 'Business Registration Number'
-  .field
-    = f.label 'Contact Number'
-    %br
-    = f.text_field :contact_no, :placeholder => 'Contact Number'
-  .field
-    = f.label 'Website/Page Url:'
-    %br
-    = f.text_field :page_url, :placeholder => 'www.lefiores.com/<your-store-url>'    
-  
-
-  .actions
-    = f.submit 'Setup My Store'
+	.actions
+		= f.submit 'Setup My Main Branch'
 
