--- a/app/views/layouts/_default_navbar.html.haml
+++ b/app/views/layouts/_default_navbar.html.haml
@@ -29,14 +29,31 @@
       %button.uk-button.uk-button-primary Submit
   .uk-navbar-content.uk-navbar-flip.uk-hidden-small
     -if current_user.present?
+      -if current_user.has_store && current_user.role == :florist
+        You are viewing branch: 
+        .uk-button-dropdown{"data-uk-dropdown" => ""}
+          .uk-button-group
+            %button.uk-button.uk-button-success
+              =@branch.sub_name
+            %div.data-uk-dropdown
+              %a.uk-button.uk-button-success
+                %i.uk-icon-caret-down                              
+                                              
+          .uk-dropdown
+            %ul.uk-nav.uk-nav-dropdown   
+              -@store_branches.each do |branch|           
+                %li
+                  %a{:href => "/store/dashboard"}                   
+                    = branch.sub_name                  
+                  
       .uk-button-dropdown{"data-uk-dropdown" => ""}
         %button.uk-button
           %i.uk-icon-ellipsis-v          
         .uk-dropdown
           %ul.uk-nav.uk-nav-dropdown
-            -if current_user.has_store
+            -if current_user.has_store && current_user.role == :florist
               %li
-                %a{:href => "#"} 
+                %a{:href => "/store/dashboard"} 
                   %i.uk-icon-money 
                   My Store            
             %li
