--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,9 +14,10 @@
   = csrf_meta_tags  
 
 %body
-
+  
   = render 'layouts/default_navbar'
   %div.uk-container.uk-container-center
-    = render 'layouts/notice'
+    .uk-margin-top
+      = render 'layouts/notice'
     = yield
 
