--- a/app/views/store/_edit_form.html.haml
+++ b/app/views/store/_edit_form.html.haml
@@ -1,5 +1,5 @@
 
-= form_for(@store, :html=> {:multipart => true},:url => {:controller => 'store',:action=>"new"}) do |f|
+= form_for(@store, :html=> {:multipart => true},:url => {:controller => 'store',:action=>"update"}) do |f|
 
   - if @store.errors.any?
     #error_explanation
