--- a/app/views/layouts/_default_navbar.html.haml
+++ b/app/views/layouts/_default_navbar.html.haml
@@ -65,7 +65,7 @@
       
     -else
       .uk-button-group
-        %a.uk-button.uk-button-primary{:href => "/users/new?type=florist"} Florist
+        %a.uk-button.uk-button-primary{:href => "/register?type=florist"} Florist
         %a.uk-button.uk-button-primary{:href => "/users/new?type=user"} Customer
       
       -#%button.uk-button.uk-button-primary Login
