--- a/app/views/branch/index.html.haml
+++ b/app/views/branch/index.html.haml
@@ -1,10 +1,10 @@
 = render 'branch/dashboard_tabs'
 
--if @store.branch.id.present?
-  
+-if @store.has_branch?
+  %h1 
+    This is the dashboard
 -else
   = render 'branch/form'
 
-%h1 
-  This is the dashboard
+
  
