--- a/app/views/layouts/_default_navbar.html.haml
+++ b/app/views/layouts/_default_navbar.html.haml
@@ -29,14 +29,14 @@
       %button.uk-button.uk-button-primary Submit
   .uk-navbar-content.uk-navbar-flip.uk-hidden-small
     -if current_user.present?
-      - if !@store_branches.nil? && @store.branch.present?
+      - if !@store_branches.nil? && @store.has_branch?
         -if current_user.has_store && current_user.role == :florist 
           You are viewing branch: 
           .uk-button-dropdown{"data-uk-dropdown" => ""}
             .uk-button-group
               %button.uk-button.uk-button-success
 
-                = @store.branch.sub_name
+                = @branch.sub_name
               %div.data-uk-dropdown
                 %a.uk-button.uk-button-success
                   %i.uk-icon-caret-down                              
