--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New user test
+%h1 Be part of our growing florist community
 
-= render 'form'
+= render 'form';
 
-=link_to 'have an account already? Login', '/login'
+=link_to 'have an account already? Login', '/login', {:alt => 'alt', :title => 'title'} 
