add user management

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -15,7 +15,7 @@
 
 %body
   
-  = render 'layouts/default_navbar'
+  = render 'layouts/admin_navbar'
   %div.uk-container.uk-container-center
     %h1
       Admin Panel
