--- a/app/views/layouts/_admin_navbar.html.haml
+++ b/app/views/layouts/_admin_navbar.html.haml
@@ -2,7 +2,7 @@
   %a.uk-navbar-brand{:href => "#"} Lefiores Admin
   %ul.uk-navbar-nav
     %li.uk-parent{"data-uk-dropdown" => ""}
-      %a{:href => ""}
+      %a{:href => "/admin/locations"}
         %i.uk-icon-home
         Locations
       .uk-dropdown.uk-dropdown-navbar
@@ -20,7 +20,7 @@
           %li
             %a{:href => "#"} Separated item
       %li.uk-parent{"data-uk-dropdown" => ""}
-        %a{:href => ""}
+        %a{:href => "/admin/users"}
           %i.uk-icon-home
             Users
             
