--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,4 +2,5 @@
   %form.uk-form
     .uk-grid
       .uk-width-1-1
-        %input.uk-width-1-1.uk-form-large{:type => "text", :placeholder => "100"}                                    
+        %input.uk-width-1-1.uk-form-large{:type => "text", :placeholder => "100"}
+        %div.uk-homepage-background
