add delivery area

--- a/app/views/admin/locations/_form_new.html.haml
+++ b/app/views/admin/locations/_form_new.html.haml
@@ -15,10 +15,10 @@
     (keywords comma separeted ex: solaris, solaris mont kiara, dutamas )     
   .field
     = f.label :state
-    = select_tag 'location[location_state]', options_from_collection_for_select(Location::State.all, "id", "name")
+    = select_tag 'location[location_state]', options_from_collection_for_select(Location::State.all)
   .field
     = f.label :city
-    = select_tag 'location[location_city]', options_from_collection_for_select(Location::City.all, "id", "name")  
+    = select_tag 'location[location_city]', options_from_collection_for_select(Location::City.all)  
   
 
 
