--- a/app/assets/stylesheets/lefiores.scss
+++ b/app/assets/stylesheets/lefiores.scss
@@ -9,3 +9,9 @@ body {
 table tbody tr td{
 	background-color:cyan;
 }
+
+h2.head-title {
+  font-weight: 300;
+  border-left: 3px solid #ff0052;
+  padding-left: 20px;
+}
