--- a/app/views/store/image_uploader.html.haml
+++ b/app/views/store/image_uploader.html.haml
@@ -24,7 +24,7 @@
   %h3 
     =t(:images_for_this_news)
   -# click on the buttons below the image (small | large) to copy the syntax which you can paste into the editor
-  = t(:click_on_the_buttons_below_the_image_to_copy_syntax)
+  You can choose from the images below to use as your store logo
   -# you can also set the following as featured image
   = t(:you_can_also_set_the_ff_as_featured_image)
   %ul#image_list
