--- a/app/views/admin/locations/index.html.haml
+++ b/app/views/admin/locations/index.html.haml
@@ -9,9 +9,10 @@
       - @locations.each do |location|
         %tr
           %td
-            = location.zipcode                
+            = location.zipcode   
+
+          %td            
+            = location.state.name if location.state.present?
           %td
-            = location.state.name
-          %td
-            = location.city.name  
+            = location.city.name  if location.city.present?
           
