--- a/app/views/layouts/_admin_navbar.html.haml
+++ b/app/views/layouts/_admin_navbar.html.haml
@@ -8,9 +8,9 @@
       .uk-dropdown.uk-dropdown-navbar
         %ul.uk-nav.uk-nav-navbar
           %li
-            %a{:href => "#"} Manage States
+            %a{:href => "/admin/states"} Manage States
           %li
-            %a{:href => "#"} Manage Cities
+            %a{:href => "/admin/cities"} Manage Cities
           %li.uk-nav-header Header
           %li
             %a{:href => "#"} Item
