--- a/app/views/branch/edit_delivery_areas.html.haml
+++ b/app/views/branch/edit_delivery_areas.html.haml
@@ -1,19 +1,20 @@
-%h2 Nearly done! tell us your delivery areas
-.uk-grid   
-  .uk-width-1-3.uk-text-center
-    %a.uk-icon-button.uk-icon-check{:href => "#", :style => 'width:100px; height:100px; font-size:50px; padding:26px;padding-top:30px;background-color:#555; color:white'} 
-    .uk-width-1-1
-      Store Setup (done)
-  .uk-width-1-3.uk-text-center
-    %a.uk-icon-button.uk-icon-check{:href => "#", :style => 'width:100px; height:100px; font-size:50px; padding:26px;padding-top:30px;background-color:#555; color:white'} 
-    .uk-width-1-1
-      Main Branch Setup (done)
-  .uk-width-1-3.uk-text-center
-    %a.uk-icon-button{:href => "#", :style => 'width:100px; height:100px; font-size:50px; padding:30px;;background-color:#555; color:white'} 3  
-    .uk-width-1-1
-      Delivery Areas Setup
+-if @branch.delivery_areas.size < 1
+  %h2 Nearly done! tell us your delivery areas
+  .uk-grid   
+    .uk-width-1-3.uk-text-center
+      %a.uk-icon-button.uk-icon-check{:href => "#", :style => 'width:100px; height:100px; font-size:50px; padding:26px;padding-top:30px;background-color:#555; color:white'} 
+      .uk-width-1-1
+        Store Setup (done)
+    .uk-width-1-3.uk-text-center
+      %a.uk-icon-button.uk-icon-check{:href => "#", :style => 'width:100px; height:100px; font-size:50px; padding:26px;padding-top:30px;background-color:#555; color:white'} 
+      .uk-width-1-1
+        Main Branch Setup (done)
+    .uk-width-1-3.uk-text-center
+      %a.uk-icon-button{:href => "#", :style => 'width:100px; height:100px; font-size:50px; padding:30px;;background-color:#555; color:white'} 3  
+      .uk-width-1-1
+        Delivery Areas Setup
 
-= form_for(@branch, :html=> {:multipart => true, :class=>'uk-form'},:url => {:controller => 'branch',:action=>"update_delivery_areas", :class => 'uk-form'}) do |f|
+= form_for(@branch, :html=> {:multipart => true, :branch_id => @branch.id},:url => {:controller => 'branch',:action=>"update_delivery_areas", :branch_id => @branch.id}) do |f|
   - if @branch.errors.any?
     #error_explanation
     = pluralize(@branch.errors.count, "error")
