product image uploader, update for nav bar, category for admin feature

--- a/app/views/branch/_dashboard_tabs.html.haml
+++ b/app/views/branch/_dashboard_tabs.html.haml
@@ -8,8 +8,12 @@
         = link_to 'Dashboard', '/store/dashboard'    
     %li
       = link_to 'Order', '/store/orders'
-    %li
-      = link_to 'Catalog', '/store/orders'  
+    -if @lefiores_tab_active == :catalog    
+      %li.uk-active
+        = link_to 'Catalog', '/store/' + @store.id + '/catalog'  
+    -else
+      %li
+        = link_to 'Catalog', '/store/' + @store.id + '/catalog'      
     %li
       = link_to 'Stats', '/store/orders'  
     -if @lefiores_tab_active == :settings    
