--- a/app/views/layouts/_default_navbar.html.haml
+++ b/app/views/layouts/_default_navbar.html.haml
@@ -37,16 +37,18 @@
               %button.uk-button.uk-button-success
                 -if @branch.present?
                   = @branch.sub_name
+                -else
+                  = Store::Branch.where(:id => @store.current_branch_id).first.sub_name
               %div.data-uk-dropdown
                 %a.uk-button.uk-button-success
                   %i.uk-icon-caret-down                              
-                                                
-            .uk-dropdown
-              %ul.uk-nav.uk-nav-dropdown                 
-                -@store_branches.each do |branch|           
-                  %li
-                    %a{:href => "/store/dashboard"}                   
-                      = branch.sub_name                  
+            -if @store_branches.size > 1                                    
+              .uk-dropdown
+                %ul.uk-nav.uk-nav-dropdown                 
+                  -@store_branches.each do |branch|           
+                    %li
+                      %a{:href => "/store/dashboard"}                   
+                        = branch.sub_name                  
                   
       .uk-button-dropdown{"data-uk-dropdown" => ""}
         %button.uk-button
