--- a/app/views/layouts/_admin_navbar.html.haml
+++ b/app/views/layouts/_admin_navbar.html.haml
@@ -3,7 +3,7 @@
   %ul.uk-navbar-nav
     %li.uk-parent{"data-uk-dropdown" => ""}
       %a{:href => "/admin/locations"}
-        %i.uk-icon-tree
+        %i.uk-icon-street-view
         Locations
       .uk-dropdown.uk-dropdown-navbar
         %ul.uk-nav.uk-nav-navbar
@@ -28,7 +28,7 @@
           %li
             %a{:href => "/admin/categories"} Manage Categories
           %li
-            %a{:href => "/admin/categories/news"} Add Category
+            %a{:href => "/admin/categories/new"} Add Category
           
       %li.uk-parent{"data-uk-dropdown" => ""}
         %a{:href => "/admin/users"}
