--- a/app/views/admin/categories/index.html.haml
+++ b/app/views/admin/categories/index.html.haml
@@ -1,8 +1,11 @@
 %a.uk-button.uk-button-primary.uk-button-large{:href => '/admin/categories/new'}
   Add Category
 -if @categories.count > 0
-  %table.uk-table
-    %thead
+
+  %table.uk-table.uk-table-hover.uk-table-striped
+    %caption
+      Categories
+    %thead  
       %th
         Name
       %th
@@ -12,12 +15,16 @@
     %body   
       -@categories.each do |category|
         %tr
-          %td
+          %td.uk-width-2-6
             = category.name
-          %td
+          %td.uk-width-3-6
             = category.description
-          %td
-            
+          %td.uk-width-1-6
+            .uk-grid
+              .uk-width-1-3
+                =link_to 'edit', '/admin/categories/' + category.id + '/edit'                              
+              .uk-width-1-3
+                delete
 
 -else
   %h1.uk-text-center
